// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies a component as the text label 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      Object {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": Array [
          Object {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        Object {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "translateX": 4,
            },
          ],
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#f44336",
            }
          }
        >
          Flat input
        </Text>
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#f44336",
            }
          }
        >
          Flat input
        </Text>
      </Text>
    </View>
    <TextInput
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=""
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "margin": 0,
          },
          Object {
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {
            "height": 56,
          },
          Object {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          Object {
            "color": "rgba(73, 69, 79, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          Array [
            Object {},
          ],
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies default textAlign based on default RTL 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      Object {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": Array [
          Object {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        Object {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "translateX": 4,
            },
          ],
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        Flat input
      </Text>
    </View>
    <TextInput
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=""
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "margin": 0,
          },
          Object {
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {
            "height": 56,
          },
          Object {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          Object {
            "color": "rgba(73, 69, 79, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          Array [
            Object {},
          ],
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly applies height to multiline Outline TextInput 1`] = `
<View
  style={Object {}}
>
  <View
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 6,
        },
        Object {
          "backgroundColor": "rgba(255, 251, 254, 1)",
          "borderColor": "rgba(121, 116, 126, 1)",
          "borderRadius": 4,
          "borderWidth": 1,
        },
      ]
    }
    testID="text-input-outline"
  />
  <View>
    <View
      style={
        Array [
          Object {
            "paddingBottom": 0,
          },
          Object {
            "minHeight": 100,
            "paddingTop": 8,
          },
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "opacity": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "transform": Array [
              Object {
                "translateX": 3,
              },
            ],
            "zIndex": 3,
          }
        }
      >
        <View
          collapsable={false}
          pointerEvents="none"
          style={
            Object {
              "backgroundColor": "rgba(255, 251, 254, 1)",
              "bottom": 4,
              "left": 10,
              "maxHeight": 2,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 6,
              "transform": Array [
                Object {
                  "translateX": -3,
                },
              ],
              "width": 12,
            }
          }
        />
        <Text
          collapsable={false}
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          style={
            Object {
              "backgroundColor": "rgba(255, 251, 254, 1)",
              "color": "transparent",
              "fontSize": 16,
              "fontWeight": undefined,
              "left": 8,
              "opacity": 1,
              "paddingHorizontal": 0,
              "position": "absolute",
              "textAlign": "left",
              "top": 58,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": -52,
                },
                Object {
                  "scale": 0.75,
                },
              ],
              "width": -16,
              "writingDirection": "ltr",
            }
          }
        >
          Outline Input
        </Text>
        <Text
          collapsable={false}
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          onLayout={[Function]}
          style={
            Object {
              "color": "rgba(103, 80, 164, 1)",
              "fontSize": 16,
              "fontWeight": undefined,
              "left": 0,
              "letterSpacing": 0.4,
              "lineHeight": undefined,
              "opacity": 0,
              "paddingHorizontal": 16,
              "position": "absolute",
              "textAlign": "left",
              "top": 58,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": -52,
                },
                Object {
                  "scale": 0.75,
                },
              ],
              "writingDirection": "ltr",
            }
          }
        >
          Outline Input
        </Text>
        <Text
          collapsable={false}
          maxFontSizeMultiplier={1.5}
          numberOfLines={1}
          style={
            Object {
              "color": "rgba(73, 69, 79, 1)",
              "fontSize": 16,
              "fontWeight": undefined,
              "left": 0,
              "letterSpacing": 0.4,
              "lineHeight": undefined,
              "opacity": 0,
              "paddingHorizontal": 16,
              "position": "absolute",
              "textAlign": "left",
              "top": 58,
              "transform": Array [
                Object {
                  "translateX": 0,
                },
                Object {
                  "translateY": -52,
                },
                Object {
                  "scale": 0.75,
                },
              ],
              "writingDirection": "ltr",
            }
          }
        >
          Outline Input
        </Text>
      </View>
      <TextInput
        editable={true}
        maxFontSizeMultiplier={1.5}
        multiline={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder=""
        placeholderTextColor="rgba(73, 69, 79, 1)"
        selectionColor="rgba(103, 80, 164, 1)"
        style={
          Array [
            Object {
              "flexGrow": 1,
              "margin": 0,
              "zIndex": 1,
            },
            Object {
              "height": 100,
            },
            Object {
              "paddingBottom": 24,
              "paddingTop": 24,
            },
            Object {
              "color": "rgba(28, 27, 31, 1)",
              "fontSize": 16,
              "fontWeight": undefined,
              "paddingHorizontal": 16,
              "textAlign": "left",
              "textAlignVertical": "top",
            },
            false,
            Array [
              Object {},
            ],
          ]
        }
        testID="text-input-outlined"
        underlineColorAndroid="transparent"
        value="Some test value"
      />
    </View>
  </View>
</View>
`;

exports[`correctly applies textAlign center 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      Object {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": Array [
          Object {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        Object {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "translateX": 4,
            },
          ],
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        Flat input
      </Text>
    </View>
    <TextInput
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=""
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "margin": 0,
          },
          Object {
            "paddingLeft": 16,
            "paddingRight": 16,
          },
          Object {
            "height": 56,
          },
          Object {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          Object {
            "color": "rgba(73, 69, 79, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "textAlign": "center",
            "textAlignVertical": "center",
          },
          false,
          Array [
            Object {},
          ],
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
</View>
`;

exports[`correctly renders left-side icon adornment, and right-side affix adornment  1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      Object {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": Array [
          Object {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        Object {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "translateX": 4,
            },
          ],
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 56,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 16,
            "paddingRight": 56,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        Flat input
      </Text>
    </View>
    <TextInput
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=""
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "margin": 0,
          },
          Object {
            "paddingLeft": 16,
            "paddingRight": 56,
          },
          Object {
            "height": 56,
          },
          Object {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          Object {
            "color": "rgba(73, 69, 79, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          Object {
            "marginLeft": 0,
            "marginRight": 40,
            "paddingLeft": 40,
            "paddingRight": 16,
          },
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "left": 16,
        "opacity": 1,
        "position": "absolute",
        "top": null,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.5}
      style={
        Array [
          Object {
            "color": "rgba(28, 27, 31, 0.54)",
          },
          Object {
            "fontSize": 16,
            "fontWeight": undefined,
          },
          Object {
            "color": "#f44336",
          },
        ]
      }
    >
      /100
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "position": "absolute",
          "width": 24,
        },
        Object {
          "right": 16,
          "top": 16,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "backgroundColor": undefined,
              "borderColor": "rgba(121, 116, 126, 1)",
              "borderRadius": 20,
              "borderWidth": 0,
              "elevation": 0,
              "height": 40,
              "margin": 0,
              "overflow": "hidden",
              "width": 40,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 6,
                "left": 6,
                "right": 6,
                "top": 6,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "color": "rgba(73, 69, 79, 1)",
                    "fontSize": 24,
                  },
                ]
              }
            >
              □
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`correctly renders left-side icon adornment, and right-side affix adornment 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(231, 224, 236, 1)",
        "borderTopLeftRadius": 4,
        "borderTopRightRadius": 4,
      },
      Object {},
    ]
  }
>
  <View
    collapsable={false}
    style={
      Object {
        "backgroundColor": "rgba(28, 27, 31, 1)",
        "bottom": 0,
        "height": 1,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "transform": Array [
          Object {
            "scaleY": 0.5,
          },
        ],
        "zIndex": 1,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "paddingBottom": 0,
          "paddingTop": 0,
        },
        Object {
          "minHeight": 56,
        },
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="none"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "opacity": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "transform": Array [
            Object {
              "translateX": 14,
            },
          ],
          "zIndex": 3,
        }
      }
    >
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        onLayout={[Function]}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 56,
            "paddingRight": 56,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        Flat input
      </Text>
      <Text
        collapsable={false}
        maxFontSizeMultiplier={1.5}
        numberOfLines={1}
        style={
          Object {
            "color": "rgba(103, 80, 164, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "left": 0,
            "letterSpacing": 0.4,
            "lineHeight": undefined,
            "opacity": 0,
            "paddingLeft": 56,
            "paddingRight": 56,
            "position": "absolute",
            "textAlign": "left",
            "top": 30,
            "transform": Array [
              Object {
                "translateX": 0,
              },
              Object {
                "translateY": -12,
              },
              Object {
                "scale": 0.75,
              },
            ],
            "writingDirection": "ltr",
          }
        }
      >
        Flat input
      </Text>
    </View>
    <TextInput
      editable={true}
      maxFontSizeMultiplier={1.5}
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=""
      placeholderTextColor="rgba(73, 69, 79, 1)"
      selectionColor="rgba(103, 80, 164, 1)"
      style={
        Array [
          Object {
            "flexGrow": 1,
            "margin": 0,
          },
          Object {
            "paddingLeft": 56,
            "paddingRight": 56,
          },
          Object {
            "height": 56,
          },
          Object {
            "paddingBottom": 4,
            "paddingTop": 24,
          },
          Object {
            "color": "rgba(73, 69, 79, 1)",
            "fontSize": 16,
            "fontWeight": undefined,
            "textAlign": "left",
            "textAlignVertical": "center",
          },
          false,
          Object {
            "marginLeft": 40,
            "marginRight": 0,
            "paddingLeft": 16,
            "paddingRight": 40,
          },
        ]
      }
      testID="text-input-flat"
      underlineColorAndroid="transparent"
      value="Some test value"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "height": 24,
          "justifyContent": "center",
          "position": "absolute",
          "width": 24,
        },
        Object {
          "left": 16,
          "top": 16,
        },
      ]
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "shadowColor": "#000",
          "shadowOffset": Object {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0,
          "shadowRadius": 0,
        }
      }
    >
      <View
        collapsable={false}
        style={
          Object {
            "shadowColor": "#000",
            "shadowOffset": Object {
              "height": 0,
              "width": 0,
            },
            "shadowOpacity": 0,
            "shadowRadius": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "backgroundColor": undefined,
              "borderColor": "rgba(121, 116, 126, 1)",
              "borderRadius": 20,
              "borderWidth": 0,
              "elevation": 0,
              "height": 40,
              "margin": 0,
              "overflow": "hidden",
              "width": 40,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            focusable={true}
            hitSlop={
              Object {
                "bottom": 6,
                "left": 6,
                "right": 6,
                "top": 6,
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "alignItems": "center",
                  "flexGrow": 1,
                  "justifyContent": "center",
                },
              ]
            }
          >
            <Text
              accessibilityElementsHidden={true}
              importantForAccessibility="no-hide-descendants"
              pointerEvents="none"
              selectable={false}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                  },
                  Object {
                    "color": "rgba(73, 69, 79, 1)",
                    "fontSize": 24,
                  },
                ]
              }
            >
              □
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    collapsable={false}
    onLayout={[Function]}
    style={
      Object {
        "alignItems": "center",
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 16,
        "top": null,
      }
    }
  >
    <Text
      maxFontSizeMultiplier={1.5}
      style={
        Array [
          Object {
            "color": "rgba(28, 27, 31, 0.54)",
          },
          Object {
            "fontSize": 16,
            "fontWeight": undefined,
          },
          Object {
            "color": "#f44336",
          },
        ]
      }
    >
      /100
    </Text>
  </View>
</View>
`;
